# json-data-type-transcompiler

./: LICENSE  README.md  pyproject.toml  setup.cfg
.github/workflows/: pytest.yml
src/jdtt/: __main__.py  conversion.py
src/jdtt/converters/: converter.py
src/jsc/: __main__.py
tests/: test_conversion.py
tests/json/: employees.json  worker.json  worker_address.json
tests/schema/python/: employees.py  worker.py  worker_address.py
tests/schema/scala/: employees.scala  worker.scala  worker_address.scala
tests/schema/typescript/: employees.ts  worker.ts  worker_address.ts
