[metadata]
name = jsc
version = attr: jsc.__version__
description = JSON to programming language schema converter
long_description = file: README.md
long_description_content_type = text/markdown
author = Joey Shi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.package_data]
jsc = py.typed

[options.entry_points]
console_scripts =
        jsc = jsc.__main__:main

[flake8]
max-line-length = 160
