[metadata]
name = jdtt
version = attr: jdtt.__version__
description = JSON to programming language schema converter
long_description = file: README.md
long_description_content_type = text/markdown
author = Joey Shi
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
include_package_data = True
packages = find:
python_requires = >=3.9
package_dir =
    =src
zip_safe = no

[options.packages.find]
where=src

[options.package_data]
jdtt = py.typed

[options.entry_points]
console_scripts =
        jdtt = jdtt.__main__:main

[flake8]
max-line-length = 160
